# ddlc-poetry-generator

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  RELEASING.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml
.github/workflows/: codeql.yml  release.yml  validate.yml
.serena/: project.yml
api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_add_title_ja.py  0003_check_constraints.py  0004_jobs_type_status_index.py
api/app/: __init__.py  assets.py  characters.py  claude_client.py  comfyui_client.py  config.py  db.py  deps.py  image_models.py  main.py  models.py  observability.py  personas.py  prompts.py  queue.py  ratelimit.py  repository.py  schemas.py  service.py  tts.py  tts_voicevox.py  tts_xtts.py  voices.py  worker_common.py  worker_gpu.py  worker_tts.py
api/scripts/: smoke.py
api/tests/: conftest.py  test_api.py  test_claude_client.py  test_comfyui_client.py  test_config.py  test_constraints.py  test_db.py  test_env_docs.py  test_image_models.py  test_models.py  test_observability.py  test_personas.py  test_ratelimit.py  test_read_api.py  test_repository.py  test_sdxl.py  test_tts_download.py  test_tts_switch.py  test_tts_xtts.py  test_voices.py  test_voicevox.py  test_worker_gpu.py  test_worker_tts.py
comfyui/: Dockerfile  README.md  download_models.sh
comfyui/workflows/: poem_sd15.json  poem_sdxl.json
docs/: API.md  ARCHITECTURE.md  DESIGN.md  PUBLIC-DEPLOY.md  SPEC.md
frontend/: .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  vitest.config.mts  vitest.setup.ts
frontend/__tests__/: api-base.test.ts  gallery.test.tsx  i18n-config.test.ts  i18n.test.ts  next-config.test.ts  poem-utils.test.ts
frontend/app/: api-base.ts  globals.css  i18n-config.ts  i18n.tsx  layout.tsx  page.tsx  poem-utils.ts  site-nav.tsx
frontend/app/gallery/: page.tsx
frontend/app/poems/[id]/: page.tsx
worker-gpu/: README.md
worker-tts/: README.md
