[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ddlc-poem-api"
version = "0.1.0"
description = "DDLC Poetry Generator - API / Claude client"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
    "SQLAlchemy>=2",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5",
    "httpx>=0.27",
    "piper-tts>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
