[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ddlc-poem-api"
version = "0.1.0"
description = "DDLC Poetry Generator - API / Claude client"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
    "SQLAlchemy>=2",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5",
    "httpx>=0.27",
    "piper-tts>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]
# Optional GPU TTS backend (#16). Heavy (pulls torch); install only for XTTS:
#   pip install ".[xtts]"   and set TTS_BACKEND=xtts on a GPU worker.
xtts = ["coqui-tts>=0.24"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions", "build"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["app"]
